# error_page_pipline_new

./: .gitignore  model_config.example.py  pyproject.toml  repair_main.py  错误页定向复核修正技术方案.md
configs/: five_case_selection.json  one_case_page222_selection.json  one_case_page4_selection.json  one_case_retry_selection.json  two_case_retry_selection.json
docs/: architecture.md  five-case-rationale.md
prompts/: candidate_vote.txt  final_judge.txt  linked_patch.txt  peer_review.txt  post_verify.txt  primary_review.txt
scripts/: list_api_models.py  probe_abab_i2t.py  probe_direct_pdf_input.py  probe_glm_peer_response.py  rebuild_corrected_html_from_reports.py
src/rate_table_repair/: __init__.py
src/rate_table_repair/cli/: main.py
src/rate_table_repair/config/: loader.py
src/rate_table_repair/decision/: __init__.py  rules.py
src/rate_table_repair/evidence/: __init__.py  builder.py  html_context.py
src/rate_table_repair/html/: __init__.py  locator.py  patcher.py
src/rate_table_repair/llm/: __init__.py  candidate_voter.py  client.py  final_judge.py  json_parser.py  linked_patch_resolver.py  peer_reviewer.py  primary_reviewer.py
src/rate_table_repair/mineru/: __init__.py  adapter.py  artifact_loader.py  page_assets.py
src/rate_table_repair/pipeline/: repair_pipeline.py
src/rate_table_repair/reports/: __init__.py  audit_writer.py
src/rate_table_repair/scanners/: __init__.py  issue_selector.py  project_scanner.py  report_loader.py
src/rate_table_repair/schemas/: __init__.py  evidence.py  patch.py  report.py  review.py
